Fix light theme button colors
Some were invisible because they were same color as background and some just looked weird.

--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -550,16 +550,28 @@
     &:hover,
     &:active,
     &.active {
-      color: $dt-text-color;
+      color: rgba($white, 0.7);
       background-color: rgba($white, 0.2);
-      fill: $dt-text-color;
-      stroke: $dt-text-color;
+      fill: rgba($white, 0.7);
+      stroke: rgba($white, 0.7);
     }
 
     &:hover:enabled,
     &:active:enabled,
     &.active:enabled {
       color: $white;
+      fill: $white;
+      stroke: $white;
+    }
+  }
+
+  .content-item-chart .btn-primary {
+
+    &,
+    &:active,
+    &.active {
+      color: $white;
+      background-color: rgba($white, 0.4);
       fill: $white;
       stroke: $white;
     }
@@ -605,10 +617,10 @@
 
     &,
     &:hover {
-      color: $dt-text-color;
+      color: rgba($white, 0.7);
       background-color: rgba($black, 0.2);
-      fill: $dt-text-color;
-      stroke: $dt-text-color;
+      fill: rgba($white, 0.7);
+      stroke: rgba($white, 0.7);
     }
 
     &:hover:enabled {
@@ -622,10 +634,10 @@
 
     &,
     &:hover {
-      color: $dt-text-color;
+      color: rgba($white, 0.7);
       background-color: $btn-success-bg;
-      fill: $dt-text-color;
-      stroke: $dt-text-color;
+      fill: rgba($white, 0.7);
+      stroke: rgba($white, 0.7);
     }
 
     &:hover:enabled {
@@ -639,10 +651,10 @@
 
     &,
     &:hover {
-      color: $dt-text-color;
+      color: rgba($white, 0.7);
       background-color: $pale-blue;
-      fill: $dt-text-color;
-      stroke: $dt-text-color;
+      fill: rgba($white, 0.7);
+      stroke: rgba($white, 0.7);
     }
 
     &:hover:enabled {
